manifests/vaultwarden/manifest.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden-postgresql
  namespace: tools
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: vaultwarden
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  serviceName: vaultwarden-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
      app.kubernetes.io/component: database
      app.kubernetes.io/instance: production
      app.kubernetes.io/part-of: vaultwarden
  template:
    metadata:
      name: vaultwarden-postgresql
      labels:
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/component: database
        app.kubernetes.io/instance: production
        app.kubernetes.io/part-of: vaultwarden
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 1000
      containers:
        - name: postgresql
          image: "bitnami/postgresql:14"
          securityContext:
            runAsUser: 1000
          ports:
            - containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "${POSTGRESQL_USERNAME}" -h 127.0.0.1 -p
                  5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "${POSTGRESQL_USERNAME}" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app.kubernetes.io/name: vaultwarden
          app.kubernetes.io/component: database
          app.kubernetes.io/instance: production
          app.kubernetes.io/part-of: vaultwarden
      spec:
        selector:
          matchLabels:
            app.kubernetes.io/name: vaultwarden
            app.kubernetes.io/component: database
            app.kubernetes.io/instance: production
            app.kubernetes.io/part-of: vaultwarden
        accessModes:
          - "ReadWriteOnce"
        storageClassName: freenas-iscsi-manual-csi
        resources:
          requests:
            storage: "20Gi"

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vaultwarden
  namespace: tools
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: production
      app.kubernetes.io/part-of: vaultwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/component: server
        app.kubernetes.io/instance: production
        app.kubernetes.io/part-of: vaultwarden
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: vaultwarden
          image: "vaultwarden/server:1.30.5-alpine"
          securityContext:
            runAsGroup: 1000
            runAsUser: 1000
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          volumeMounts:
            - name: vaultwarden
              mountPath: /data
          resources: {}
      volumes:
        - name: vaultwarden
          persistentVolumeClaim:
            claimName: vaultwarden-data-pvc-nfs

---
kind: Service
apiVersion: v1
metadata:
  name: vaultwarden-postgresql-hl
  namespace: tools
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: vaultwarden
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  selector:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: vaultwarden
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: 5432

---
kind: Service
apiVersion: v1
metadata:
  name: vaultwarden
  namespace: tools
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: vaultwarden
spec:
  selector:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: vaultwarden
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: vaultwarden
  namespace: tools
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: vaultwarden
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 250m
spec:
  ingressClassName: nginx-public
  rules:
    - host: "bitwarden.theautomation.nl"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
  tls:
    - hosts:
        - bitwarden.theautomation.nl
      secretName: tls-wildcard-theautomation-nl
